@@ -7,6 +7,11 @@
 
 *  Fix bug when using set trace introduced in 1.16 in adding "command".
 
+*  Add "directory" and "show directories" commands. 
+
+* All show and info commands (will) allow abbreviations in the
+  subcommand name. E.g. "show dir" for "show directories"
+
 * The "turn-on-pydbtrack" command turns removes py-pdbtrack from
   comint-output-filter-functions which was removing the cursor in the
   source window.
